Added personal contributions for Amy and Roman

--- a/reports/20251010.md
+++ b/reports/20251010.md
@@ -24,22 +24,30 @@
 
 ### Progress & Issues
 #### What I did:
--
+- Brainstormed task/feature items for the project backlog as part of the P5 deliverable.
+- Started working with Figma to prepare for potential prototyping tasks.
+- Worked through Next.js tutorials outlined above.
+- Consulted with team members on preferred development tools and worked to get environments set up on each member’s system.
+- Added labels/tags to our GitHub project settings to simplify estimation, complexity, etc.
+- Created issue templates in the project repository for standardized formatting.
 
 #### What went well:
--
+- I was able to set up our GitHub project issues so that any new issue will automatically be added to the backlog, unless the creator specifies a different status. 
 
 #### What I struggled with:
--
+- N/A
 
 #### Where I am blocked:
--
+- Questioning whether Next.js is the right technology to use for our backend. Will be talking to the team over the weekend to confirm pros/cons of alternatives and solidify plans.
 
 #### What I learned:
--
+- GitHub’s issue templating feature seems like a useful utility to ensure consistency across our created issues.
+- Using Supabase for authentication/DB client requires careful consideration of policies to ensure proper data protections against unauthorized access.
 
 ### Plans & Goals for Next Week
--
+- Consult with the team to finalize long-term technology strategy for front/back-end development. (1 day)
+- Set up the back-end architecture in our Github repository. (1 day)
+- Implement the login/authentication functionality, including error handling. (2 days)
 
 ---
 
@@ -99,19 +107,22 @@
 
 ### Progress & Issues
 #### What I did:
--
+- Became familiar with Github
+- Became more familiar with figma
+- Worked on a prototype in figma for our potential UI
+- Attended MRU Hackathon and learned a variety of skills
 
 #### What went well:
--
+- Github and figma seem less overwhelming anymore
 
 #### What I struggled with:
--
+- Working with github merges was painful at the MRU Hackathon, we repeatedly had to resolve merge conflicts
 
 #### Where I am blocked:
--
+- N/A
 
 #### What I learned:
--
+- How to work github and figma this week
 
 ### Plans & Goals for Next Week
--
+- Complete and finalize website UI
