--- a/reports/20251010.md
+++ b/reports/20251010.md
@@ -1,6 +1,8 @@
 # Team Report
 
 ## Project Meeting Agenda
+- Review team member goals for Reading Week, and align expectations accordingly.
+- Assign initial tasks and outline communication plan in case issues arise.
 
 ## Last Week's Goals
 - As a team, discuss/deliberate on preferred development tools, and configure each team member’s development environment. (2–3 days)
@@ -10,10 +12,13 @@
 - Discuss work flow plans (from the perspective of merge conflicts, etc.)
 
 ## Progress & Issues
--
+- Generated ideas for features & stretch goals, and populated the GitHub project with associated issues.
+- Completed the high fidelity prototype for the Influencer applying to a gig posting use case.
+- The team has discussed and refined the shared vision for the project’s minimum viable product, to better understand and align ourselves with the project’s goals.
 
 ## Plans & Goals for Next Week
--
+- Deployable live build? - Basic page to showcase front end components
+- Implement initial sign up / sign in functionality.
 
 # Individual Contributions
 
@@ -58,22 +63,26 @@
 
 ### Progress & Issues
 #### What I did:
--
+- Not as much as I might’ve liked - heavier focus on other course obligations this week
+- Contributed to discussions on the refinement of the project’s features & feature generation
+- Setup personal development environment on development PC
 
 #### What went well:
--
+- Did not run into issues configuring my own machine
+- Group continues to maintain productive and cordial communication
 
 #### What I struggled with:
--
+- Striving to improve my own understanding of how to estimate and reconcile possible project features within a reasonable and scope
 
 #### Where I am blocked:
--
+- I wouldn’t say I’m stuck anywhere currently
 
 #### What I learned:
--
+- Improved knowledge on GitHub workflows, including different branching mechanics
+- GitHub task integrations & project management tools
 
 ### Plans & Goals for Next Week
--
+- Begin developing generic / frequently used front end components - with the goal of preventing any bottlenecking in other team-members' work flows (such as UX design).
 
 ---
 
@@ -85,17 +94,29 @@
 
 ### Progress & Issues
 #### What I did:
+- Setup a superbase project schema
+- Designed table relationships around user profiles to separate authentication from the direct profile
 
 #### What went well:
+- Working on fields in these tables (Tables = User,profile,gig, etc…
 
 #### What I struggled with:
+- Recollection on foreign keys & relationships.
+- Understanding of how I would construct the profiles in the database which was initially Influencers,Business
 
 #### Where I am blocked:
+- I need to further investigate the data types in SQL
+- Sorting out fields I will have to work with
 
 #### What I learned:
+- Superbase UI
+- Recollection of SQL deepens
+  - FK <- lol foreign key 
+  - Relationships
+- Creating a database
 
 ### Plans & Goals for Next Week
--
+- Continue working on the database, add fields. Refine and test with dummy data.
 
 ---
 
