Updated personal reflection

--- a/reports/20251024.md
+++ b/reports/20251024.md
@@ -20,28 +20,33 @@
 
 ### Progress & Issues
 #### What I did:
-- After discussion with the team, I created a new ASP.NET/React project for our website.
+- After discussion with the team, I created a new ASP.NET/React project for our website
 - Configured backend project structure
 - Setup Docker images for Database and WebApp
 - Created sample page demonstrating the connection between front-end and backend with calls to database for gig information
 - Spent some time trying to better understand the Sign in with Google process
+- Finalized requirements and structure for user table so that login functionality can be implemented
 
 #### What went well:
-- Docker seems to have effectively streamlined the dev environment.
+- Docker seems to have effectively streamlined the dev environment
 
 #### What I struggled with:
-- I ran into a couple of issues trying to wrap my head around the Sign in with Google requirements, so I made less progress with this than I would have liked. 
-- After talking to the team, I think we’ve decided to populate our user table with mock users, and consider returning to third-party auth later in the project if it makes sense.
+- I ran into a couple of issues trying to wrap my head around the Sign in with Google requirements, so I made less progress with this than I would have liked
+- After talking to the team, I think we’ve decided to populate our user table with mock users, and consider returning to third-party auth later in the project if it makes sense
 
 #### Where I am blocked:
-- Due to midterms & other commitments, as well as the struggle with Sign in with Google, I may not get login functionality implemented before Monday.
+- Due to midterms & other commitments, as well as the struggle with Sign in with Google, I may not get login functionality implemented before Monday
 
 #### What I learned:
-- I learnt a lot about how to configure separate Docker containers and get them to talk to each other.
-- Connecting a C# backend to a Postgres database, and how that translates on the front-end React app.
-- Docker Secrets seem quite powerful for maintaining the security of privileged information.
+- I learnt a lot about how to configure separate Docker containers and get them to talk to each other
+- Connecting a C# backend to a Postgres database, and how that translates on the front-end React app
+- Docker Secrets seem quite powerful for maintaining the security of privileged information
 
 ### Plans & Goals for Next Week
+- Setup production server with continuous deployment off of the main branch (1-2 days)
+  - This involves researching options and consulting with the team.
+- Complete login/authentication functionality, including error handling. (2 days)
+  - This may be started before the week starts, pending progress between now and Monday.
 
 ---
 
