Started progress and weekly team goals

--- a/reports/20251024.md
+++ b/reports/20251024.md
@@ -4,11 +4,18 @@
 
 ## Last Week's Goals
 - Deployable live build? - Basic page to showcase front end components
-- Implement initial sign up / sign in functionality.
+- Implement initial sign up / sign in functionality
 
 ## Progress & Issues
+- Created baseline React/.NET app with connection to a Postgresql database, using Docker containers
+- Started developer guide to facilitate easier onboarding when beginning work on the project
 
 ## Plans & Goals for Next Week
+- Set up the basic UI interfaces for main pages - Sign in, Search, Profile pages (needs estimate)
+- Implement the sign-up/sign-in functionality on the backend (est. 2 days)
+- Begin implementation of profile creation functionality (est 2 days)
+- Configure “live” environment for the project, including CD to stay up to date with new changes (est. 1-2 days)
+- As a team, research CI/CD options for the project, and decide on the service we want to work with (2-3 days)
 
 # Individual Contributions
 
@@ -16,7 +23,7 @@
 ### Last Week's Goals
 - Consult with the team to finalize long-term technology strategy for front/back-end development. (1 day)
 - Set up the back-end architecture in our Github repository. (1 day)
-- Implement the login/authentication functionality, including error handling. (2 days)
+- Implement the login/authentication functionality, including error handling (2 days)
 
 ### Progress & Issues
 #### What I did:
