Added meeting agenda for Monday

--- a/reports/20251024.md
+++ b/reports/20251024.md
@@ -1,6 +1,10 @@
 # Team Report
 
 ## Project Meeting Agenda
+- Main discussion: Sort out what tools we will be using (test-automation and continuous integration) for the backend and for the frontend
+  - What testing tool should we use React?
+  - Do you have any suggestions for how much of the UI we should aim to try and test?
+- Should we set up the continuous integration first, or should we make some unit tests first using a C# framework like xUnit?
 
 ## Last Week's Goals
 - Deployable live build? - Basic page to showcase front end components
@@ -90,16 +94,26 @@
 
 ### Progress & Issues
 #### What I did:
+- I updated the postgreSQL database using DBeaver. Within the schema I designed and implemented the required tables (Users, Profiles, Gigs, Applications and Ratings) with a revision on the data types.
+- I also established constraints such as CHECK condition, timestamps and “Referential integrity rules” to ensure consistency on data linkage. 
+- I also utilized DBeaver visualizer to create an ER diagram in which I intend to provide the frontend for reference.
+- Did some dummy data testing however minimal
 
 #### What went well:
+- The database setup and schema creation process in DBeaver worked smoothly once PostgreSQL was properly configured which surprisingly was not so easy.
 
 #### What I struggled with:
+- I had trouble connecting DBeaver to PostgreSQL at first and getting the visible schema to show up. I also ran into issues with foreign key validation.
 
 #### Where I am blocked:
+- N/A
 
 #### What I learned:
+- I relearnt how to properly set up and manage PostgreSQL database using DBeaver
 
 ### Plans & Goals for Next Week
+- Begin mapping out how I will use C# to connect to PostgreSQL
+- Potentially build a small test API like one end point that can read and insert data into the user table
 
 ---
 
