Updated report with personal contribution and team progress

--- a/reports/20251031.md
+++ b/reports/20251031.md
@@ -1,6 +1,7 @@
 # Team Report
 
 ## Project Meeting Agenda
+- 
 
 ## Last Week's Goals
 - Set up the basic UI interfaces for main pages - Sign in, Search, Profile pages (needs estimate)
@@ -10,10 +11,22 @@
 - As a team, research CI/CD options for the project, and decide on the service we want to work with (2-3 days)
 
 ## Progress & Issues
+\+ Added unit testing infrastructure for the visible.Services project.
 
+\+ Implemented sign-up and sign-in API endpoints using email/password.
+
+\+ Implemented influencer profile creation API endpoint.
+
+\+ Deployed a live version of the project (not in the docker containers used for development).
+
+\+ Configured CI for the project.
+
+\+ Created the generic components to be used on the front-end.
+
+\- Didn’t get the front-end views that we wanted to have created this week.
 
 ## Plans & Goals for Next Week
-
+- 
 
 # Individual Contributions
 
@@ -27,21 +40,31 @@
 
 ### Progress & Issues
 #### What I did:
-
+- Continued migration of feature/task/knowledge acquisition work items into GitHub project for ease of tracking.
+- Implemented backend APIs for email/password sign-in and sign-up.
+- Researched unit testing frameworks for C# and implemented a couple of tests for the visible.Services project.
+- Researched CI options to try and aid in P6 completion.
+- Investigated how to configure a self-hosted solution for the live version of our app.
 
 #### What went well:
-
+- I was able to test and validate the sign-in and sign-up API endpoints using Postman, with mock data from the user table.
+- I was able to get unit testing incorporated into part of the backend infrastructure.
 
 #### What I struggled with:
-
+- When trying to implement a unit test for a database query, I initially had trouble trying to mock out the connection and other required components/classes. I ended up spending some time researching what was required to make it possible to unit test this type of functionality without having a database available.
+- When trying to ensure that everyone had appropriate tasks on Wednesday, Matthew mentioned that he had been hoping to try implementing this functionality for influencer profiles. Because of the remaining work on P6, I let him take this on to start, so that I could dedicate more time to CI research and eventual implementation.
 
 #### Where I am blocked:
-
+- At times, it feels like there is a feeling of confusion within the team, regarding what tasks should be tackled next. Additionally, I’ve found myself asking team members to clarify what their action items are, as it feels like there may be some amount of duplicated effort, which could lead to missed opportunities for feature implementation. I’ve been trying to help course correct when I’ve noticed this and brought it up within the team but I’m wondering if there’s a way I could be more effective in supporting the overall goals and direction?
 
 #### What I learned:
-
+- Unit testing for database functionality is not necessarily the most straightforward at first, but there are ways to overcome obstacles using mocking tools. 
+- Continuous Integration services can be overwhelming when trying to understand what is required for the setup. Thankfully, I have some prior experience writing yaml files, which may aid in the configuration process.
 
 ### Plans & Goals for Next Week
+- Implement the backend functionality to create and update gig listings (1 day)
+- Implement unit tests for the Gig Listing endpoints noted above (1 day)
+- Secure a custom domain for the project site (0.5 days)
 
 ---
 
