Updated progress from this week

--- a/reports/20251107.md
+++ b/reports/20251107.md
@@ -28,13 +28,28 @@
 
 #### What I did:
 
+- Implemented backend functionality for creating and updating gig listings.
+- Implemented unit tests for gig listing endpoints.
+- Implemented JWT token functionality in backend for user authentication/authorization
+- Secured our custom domain.
+- Helped Alex debug failing API calls for sign-in and sign-up.
+
 #### What went well:
+
+- I was able to quickly create and test a number of endpoints that will be helpful for our beta demo next week.
+- JWT token generation and validation was fairly easy to implement.
 
 #### What I struggled with:
 
+- While I did not struggle to get the sign-in and sign-up API endpoints created, I struggled to get them to work with a mocked-out front end while another team mate was creating the components. Thankfully, this was resolved fairly quickly, once the front-end component became available.
+
 #### Where I am blocked:
 
+- N/A
+
 #### What I learned:
+
+- I learned how to implement JWT tokens for user session management and API protection within .NET.
 
 ### Plans & Goals for Next Week
 
