Added Roman Little Weekly Report Part

--- a/reports/20251107.md
+++ b/reports/20251107.md
@@ -112,12 +112,29 @@
 
 #### What I did:
 
+- Worked on a basic Nav component
+- Help on P5 sunday once I got home from my Ukranian Dance Perormance
+- Worked on the P7 Deliverable over the weekend
+
 #### What went well:
+
+- I am becomming more familiar with putting together local builds and
 
 #### What I struggled with:
 
+- My build broke twice seemingly out of random. both times it broke, it took me half a day to fix. Im still not sure why they broke in the first place
+- I lost a lot of time due to being sick Wendsday and Thrusday, and from last weeks Ukranian Dance performance over the weekend.
+
 #### Where I am blocked:
+
+- I need a reliable way that my build will not just randomly break on me. I fixed my build monday, didnt touch a thing, and it breaks on me wendsday!
 
 #### What I learned:
 
+- I have learned mroe github version controlls, and how to create and partially fix builds on my local machine
+
 ### Plans & Goals for Next Week
+
+- Finish nav bar componenet without my build breaking
+- Find a consistent way to keep my builds from breaking
+- See if anybody else needs help building, finishing, or testing componenets
