Added team's progress for the week

--- a/reports/20251107.md
+++ b/reports/20251107.md
@@ -12,7 +12,15 @@
 
 ## Progress & Issues
 
+- Implemented endpoints for gig listing creation and update.
+- Implemented business profile API endpoints.
+- Secured a custom domain for the project: https://visibleapp.ca
+- Created unit tests for gig listing endpoints.
+- Created front-end views for sign-in, sign-up.
+
 ## Plans & Goals for Next Week
+
+-
 
 # Individual Contributions
 
@@ -31,7 +39,7 @@
 - Implemented backend functionality for creating and updating gig listings.
 - Implemented unit tests for gig listing endpoints.
 - Implemented JWT token functionality in backend for user authentication/authorization
-- Secured our custom domain.
+- Secured a custom domain for the project.
 - Helped Alex debug failing API calls for sign-in and sign-up.
 
 #### What went well:
