Added team progress & added personal goals for next week

--- a/reports/20251107.md
+++ b/reports/20251107.md
@@ -17,6 +17,7 @@
 - Secured a custom domain for the project: https://visibleapp.ca
 - Created unit tests for gig listing endpoints.
 - Created front-end views for sign-in, sign-up.
+- Implemented endpoints for gig listing applications.
 
 ## Plans & Goals for Next Week
 
@@ -41,6 +42,7 @@
 - Implemented JWT token functionality in backend for user authentication/authorization
 - Secured a custom domain for the project.
 - Helped Alex debug failing API calls for sign-in and sign-up.
+- Implemented backend functionality to apply to a gig listing.
 
 #### What went well:
 
@@ -60,6 +62,12 @@
 - I learned how to implement JWT tokens for user session management and API protection within .NET.
 
 ### Plans & Goals for Next Week
+
+- Implement the backend functionality to modify a gig listing (est 2 days)
+  - This includes updating content, changing the status, deleting, etc.
+- Implement backend functionality for influencers to view their application history, pending and active gigs (est 2 days)
+- Expand gig listing unit tests to include new gig modification test cases (est 1 day)
+- Research storage options for storing user-uploaded photos (est 1 day)
 
 ---
 
