Update weekly report for progress and goals
Documented progress, challenges, and goals for the week.

--- a/reports/20251107.md
+++ b/reports/20251107.md
@@ -104,16 +104,30 @@
 ### Progress & Issues
 
 #### What I did:
+- Created and structured the BusinessRepository. Implementation includes retrival of all businesses, by name and profile creation.
+- built the BusinessController with API endpoints for those operations mention prior
+- Reconfigured Docker setup
 
 #### What went well:
+- Docker build configuration was successful with the support of the updated dev guide
+- BusinessRepository was not too challenging as I built off of the influencer API
 
 #### What I struggled with:
+- N/A
 
 #### Where I am blocked:
+- Testing my endpoints, will look into Postman to test my influencer and business APIs
 
 #### What I learned:
+- Feeling more confident working with C# (Syntax is becoming easier to read)
+- The building of an API flow from have a table built on SQL, Repository and controller
+- Working with Github
 
 ### Plans & Goals for Next Week
+- Learn how to use Postman for APIs
+- Test influencer/business API endpoints using Postman
+- implement unit testing
+- Look into how I can assist with integration
 
 ---
 
