Add task to work on P7 deliverable

--- a/reports/20251107.md
+++ b/reports/20251107.md
@@ -128,6 +128,7 @@
 - Test influencer/business API endpoints using Postman
 - implement unit testing
 - Look into how I can assist with integration
+- Work on P7 deliverable
 
 ---
 
