added information into my weekly report section

--- a/reports/20251107.md
+++ b/reports/20251107.md
@@ -82,15 +82,32 @@
 
 #### What I did:
 
+- Added front end components necessary for the beta / demo
+- Added tailwind styling to define some of the core structure of the web app
+- Added testing framework for front-end -> vitest
+- Assisted with code review
+
 #### What went well:
+
+- The front end communication with server APIs seems to be working
+- Front-end structure is being fleshed out
+- Shadcn components (UI Library) are proving to be very useful
 
 #### What I struggled with:
 
+- Some components are taking longer to develop than anticipated (search views)
+
 #### Where I am blocked:
+
+- I don't think I'm blocked anywhere currently.
 
 #### What I learned:
 
+- Developing a greater understanding of utilizing react context
+
 ### Plans & Goals for Next Week
+
+- Finish all front-end work necessary for demo & beta (some components then page flow)
 
 ---
 
@@ -104,26 +121,32 @@
 ### Progress & Issues
 
 #### What I did:
+
 - Created and structured the BusinessRepository. Implementation includes retrival of all businesses, by name and profile creation.
 - built the BusinessController with API endpoints for those operations mention prior
 - Reconfigured Docker setup
 
 #### What went well:
+
 - Docker build configuration was successful with the support of the updated dev guide
 - BusinessRepository was not too challenging as I built off of the influencer API
 
 #### What I struggled with:
+
 - N/A
 
 #### Where I am blocked:
+
 - Testing my endpoints, will look into Postman to test my influencer and business APIs
 
 #### What I learned:
+
 - Feeling more confident working with C# (Syntax is becoming easier to read)
 - The building of an API flow from have a table built on SQL, Repository and controller
 - Working with Github
 
 ### Plans & Goals for Next Week
+
 - Learn how to use Postman for APIs
 - Test influencer/business API endpoints using Postman
 - implement unit testing
