Updated team goals and agenda

--- a/reports/20251107.md
+++ b/reports/20251107.md
@@ -2,6 +2,10 @@
 
 ## Project Meeting Agenda
 
+- Discuss and finalize plan for beta presentation and demo.
+- Review priorities for coming weeks.
+- Align on requirements/responsibilities.
+
 ## Last Week's Goals
 
 - Implement API endpoints for gig listing creation & updates (est 2 days)
@@ -21,7 +25,10 @@
 
 ## Plans & Goals for Next Week
 
--
+- As a team, discuss which endpoints we want to have restricted to a user being signed in, and implement JWT token authorization accordingly (est 2 days)
+- Implement functionality for viewing application history, in whole and grouped by status (est 2 days)
+- Research options for storing user submitted photos, and decide whether we want to proceed with implementation based on findings. (est 2 days)
+- Implement endpoints & unit tests for gig listing modification (est 2-3 days)
 
 # Individual Contributions
 
