Updated personal section for weekly report

--- a/reports/20251114.md
+++ b/reports/20251114.md
@@ -13,7 +13,12 @@
 
 ## Progress & Issues
 
+-
+
 ## Plans & Goals for Next Week
+
+- Implement functionality for viewing application history, in whole and grouped by status (est 2 days)
+- Implement endpoints & unit tests for gig listing modification (est 2-3 days)
 
 # Individual Contributions
 
@@ -31,15 +36,44 @@
 
 #### What I did:
 
+- Aided Roman in debugging configuration issues so that he can build again.
+- Aided Matthew in merging main into his feature branches and resolving merge-conflicts, so that other items I had in progress could be completed in time for Wednesday's demo.
+- Updated the client-side data module to include the recently added endpoints.
+- Implemented front-end forms for gig listing creation and applications, to prepare for the beta demo.
+- Investigated storage options for handling user submitted photos.
+- Enhanced the JWT token implementation to utilize an HTTP only cookie, which reduces the amount of information that the front-end must provide the server for API calls.
+- Implemented the back-end functionality to sign-out, including removal of the HTTP Only cookie on the client-side.
+- Updated our README to incorporate feedback from P7 deliverable.
+- Began implementing the backend functionality to modify a gig listing.
+- Collaborated with the team to develop a comprehensive user guide, and refine our development guide.
+
 #### What went well:
+
+- Despite not being where we wanted to be at the end of Sunday, the team was able to pull together and enhance our demo-able product before Wednesday's lecture.
+- Resolved some issues that had been hampering group member's ability to build/develop the project.
 
 #### What I struggled with:
 
+- Getting ready for the demo took more capacity than I had hoped, as the team found ourselves needing some increased attention on the front-end components to enhance our potential beta.
+- I was worried that we were going to be ill-prepared for the demo, as the attempts that I made to coordinate times for the team to get together and discuss roles/content did not materialize as intended.
+
 #### Where I am blocked:
+
+- Pressures on my time to assist the group with configurations, version control, and implementing front-end components prevented me from being able to complete some of the backend tasks that I had originally intended to complete.
+  - I have begun the implementation for modifying a gig listing, but am not certain if I will be able to complete it before Sunday night.
+- My goal of implementing functionality for influencers to view their past applications and pending/accepted gig listings is blocked by the lack of a profile page/UI to integate with.
 
 #### What I learned:
 
+- I discovered the ability to manage a user's JWT token using HTTP only cookies, which simplifies the process of the front-end calling APIs and passing user-specific information.
+
 ### Plans & Goals for Next Week
+
+- Implement the backend functionality to modify a gig listing (est 2 days)
+  - This includes updating content, changing the status, deleting, etc.
+  - This has been started, but is included for next week due to concerns that I will not be able to complete it by Sunday night.
+- Implement backend functionality for influencers to view their application history, pending and active gigs (est 2 days).
+- Develop unit tests for the newly added gig-listing endpoints (est. 1 day)
 
 ---
 
