Added Roman's Part of the report for this week

--- a/reports/20251114.md
+++ b/reports/20251114.md
@@ -158,14 +158,34 @@
 
 ### Progress & Issues
 
+- Nav bar component was started by me and finished by alex
+- I CAN BUILD WITHOUT ERRORS!!!!
+
 #### What I did:
+
+- Finally fixed my build with the help of Amy
+- Start work on a Nav bar component that Alexander eventually used parts of
+- Created the body of what would be our presentation slides due this week
 
 #### What went well:
 
+- MY BUILD WORKS!!!!
+  - I had to mess with a system 32 file to get it to work but it now works. We have the fix doccumented in case anybody else gets this error in the future
+- github overall is making very much sence and I can now say that I am familiar with it, compared to the start of the term where i didnt know how to work it at all
+
 #### What I struggled with:
+
+- Im still fairly new to TSX, so work on components happens slowly compared to alex who seems to grind through everything at a lightning fast pace.
 
 #### Where I am blocked:
 
+- I need to figure out what needs to be done next and then work on that. (saturday job)
+
 #### What I learned:
 
+- I learned how to code in TSX, learning that if there is an error, you likely need to import something to make it work
+
 ### Plans & Goals for Next Week
+
+- See what needs to be made for front end components and work on those
+- help wherever possible for our beta test with others, and get our guthub and discord ready for that
