Updated team progress and issues

--- a/reports/20251114.md
+++ b/reports/20251114.md
@@ -14,7 +14,10 @@
 
 ## Progress & Issues
 
--
+- Researched options for storing user photos. After some investigation, it may not be worth implementing the "upload" functionality, and we need to decide how we want to proceed.
+- Enhanced the JWT session management, so that we can serve user-specific content, and have the ability to restrict content based on whether a user is logged in or not.
+- Resolved build issues and merge conflicts resulting from outdated feature branches.
+- Implemented front-end components for creating and applyng to gig listings.
 
 ## Plans & Goals for Next Week
 
