added my section to the report

--- a/reports/20251114.md
+++ b/reports/20251114.md
@@ -91,15 +91,35 @@
 
 #### What I did:
 
+- Implemented many front end components supporting the core use cases (Gig listing posting & searching, sign in & sign up components, defined page flow within the app, nav bar & sub menu)
+
 #### What went well:
+
+- The components that I finished largely performed their functions
+- I was very happy with many of the elements I had the chance to define styling for, they came out much better than expected given the time frame
 
 #### What I struggled with:
 
+- We had some miscommunication in what was required by a couple of the APIs, leading to those requirements being assigned to the wrong information for the demo.
+- I think our demo fell short of where we wanted it to be. In my opinion it was largerly pacing, and the above problem drastically affecting the flow of the actual product demo.
+
 #### Where I am blocked:
+
+- I don't feel blocked anywhere besides by myself. I have a strong idea for the direction of features and front-end work that I'd like to see for the rest of the project, but I don't think that it aligns with the goals of the group.
+- I am rapidly losing interest in continuing to expand the project as a result of where we've been able to get the project thus far, along side the level of commitment that other courses are demanding.
 
 #### What I learned:
 
+- I learned a lot from the other project presenations, they had some very interesting and insightful solutions to problems.
+- With Amy's lead, we built a greater understanding of using cookies and managing server responses from the front-end perspective.
+- Refined my skills with react and tailwind more
+- I'm come to the understanding that component libraries (and I assume libraries in general) can sometimes be more cumbersome than they may be worth - relating to some of the expectations or requirements that they necessitate to be used. Depending on the context, inhouse solutions to simple problems may be more of an answer in the future.
+
 ### Plans & Goals for Next Week
+
+- Refine current front-end implementations
+- Update dev and user guides for incoming reviewers
+- Test front end components (most of them are from components libraries however, so tests should be oriented at the behaviour we implement)
 
 ---
 
