Updated my personal section of the report

--- a/reports/20251121.md
+++ b/reports/20251121.md
@@ -31,16 +31,30 @@
 
 - Implemented front-end components for searching influencers and businesses, in addition to gig listings.
 - Attempted to facilitate team communication so that we can decide which features we want to prioritize for the final release presentation.
+- Integrated the JWT cookie authentication with the front-end components, and simplified some existing UI flows.
 
 #### What went well:
 
+- Receiving feedback on Monday allowed me to not sink valuable time into backend functionality that may be too risky for the final demo.
+
 #### What I struggled with:
+
+- I did not achieve the goals I had initially planned for this week, after the discussion from Monday's project meeting. Given the length of time remaining, my goals were a bit too ambitious for the project in general, and my priorities needed to shift.
+- I've found it challenging to determine where my efforts are best directed, because I've received minimal input from the team on the components that we want to prioritize for the final presentation.
 
 #### Where I am blocked:
 
+- See above. I want to make meaningful progress, but do not want to make unilateral decisions for the team.
+
 #### What I learned:
 
+-
+
 ### Plans & Goals for Next Week
+
+- With the team, determine which pieces of feedback we want to address for the final presentation.
+- Implement fixes where I am best fit to do so.
+- Test the release candidate build, and begin preparing for the final presentation.
 
 ---
 
