Revise progress report for week of 20251121
Updated progress report with recent activities and challenges.

--- a/reports/20251121.md
+++ b/reports/20251121.md
@@ -93,16 +93,23 @@
 ### Progress & Issues
 
 #### What I did:
+- Reviewed the current backend structure, to figure out what added features we could use for our final presentation.
+- Started working toards unit testing the business repository
+
 
 #### What went well:
+- Updating and refining the documentation (User guide) helped me solidify my understanding of the architecture.
 
 #### What I struggled with:
-
+- Didn’t get as far on query restructuring as intended due to other urgent priorities
 #### Where I am blocked:
-
+N/A
 #### What I learned:
-
+The gaps in my testing knowledge, however that is primarily due to time.
 ### Plans & Goals for Next Week
+- Restructure the query logic inside the repositories
+- Support the front end to enable a seamless final presentation
+- Implement unit tests for the Business and Influencer API
 
 ---
 
