Fix formatting and update content in 20251121.md

--- a/reports/20251121.md
+++ b/reports/20251121.md
@@ -103,9 +103,9 @@
 #### What I struggled with:
 - Didn’t get as far on query restructuring as intended due to other urgent priorities
 #### Where I am blocked:
-N/A
+- N/A
 #### What I learned:
-The gaps in my testing knowledge, however that is primarily due to time.
+- The gaps in my testing knowledge, however that is primarily due to time.
 ### Plans & Goals for Next Week
 - Restructure the query logic inside the repositories
 - Support the front end to enable a seamless final presentation
