Added roman's section to the weekly report

--- a/reports/20251121.md
+++ b/reports/20251121.md
@@ -93,20 +93,28 @@
 ### Progress & Issues
 
 #### What I did:
+
 - Reviewed the current backend structure, to figure out what added features we could use for our final presentation.
 - Started working toards unit testing the business repository
 
-
 #### What went well:
+
 - Updating and refining the documentation (User guide) helped me solidify my understanding of the architecture.
 
 #### What I struggled with:
+
 - Didn’t get as far on query restructuring as intended due to other urgent priorities
+
 #### Where I am blocked:
+
 - N/A
+
 #### What I learned:
+
 - The gaps in my testing knowledge, however that is primarily due to time.
+
 ### Plans & Goals for Next Week
+
 - Restructure the query logic inside the repositories
 - Support the front end to enable a seamless final presentation
 - Implement unit tests for the Business and Influencer API
@@ -124,12 +132,24 @@
 
 #### What I did:
 
+- Complete my p9 review of team MRU exchange
+- Worked on the styling of all pages for the visible project
+- learned how tailwind css styling works
+
 #### What went well:
 
+- the p9 review took less time than expected, everything workes smoothly
+
 #### What I struggled with:
+
+- I have never done tailwind before, so I am learning this language as I am actively styling
 
 #### Where I am blocked:
 
 #### What I learned:
 
+- I leaned how to use tailwind
+
 ### Plans & Goals for Next Week
+
+- See what needs to be made for front end components and work on those, ideally without breaking anything in the last week
