added my section to the weekly report

--- a/reports/20251121.md
+++ b/reports/20251121.md
@@ -70,15 +70,31 @@
 
 #### What I did:
 
+- Not a whole lot - focused on other obligations
+- Code Reviewed some PRs and Reviewed another project
+- Tried to remain available for communications / support despite reduced to directly contribute
+
 #### What went well:
+
+- I was able to answer questions and provide input where I was needed
 
 #### What I struggled with:
 
+- Having little time to contribute to the project this week definitely qualifies.
+
 #### Where I am blocked:
+
+- I wouldn't say I'm blocked anywhere besides time
 
 #### What I learned:
 
+- //
+
 ### Plans & Goals for Next Week
+
+- Assist in finishing and deploying the "final build" of the project
+- Refine Styling
+- Refine front-end components to trim / improve structure of forms
 
 ---
 
